--- a/.github/workflows/tf_dev_plan.yml
+++ b/.github/workflows/tf_dev_plan.yml
@@ -14,6 +14,10 @@ on:
 
 env:
   TF_WORKSPACE: development
+  TF_VAR_oci_key_fingerprint: ${{ secrets.OCI_KEY_FINGERPRINT }}
+  TF_VAR_tenancy_ocid: ${{ secrets.TENANCY_OCID }}
+  TF_VAR_user_ocid: ${{ secrets.USER_OCID }}
+  TF_VAR_oci_key: ${{ secrets.OCI_KEY }}
 
 permissions:
   contents: read
