--- a/.github/workflows/tf_dev_plan.yml
+++ b/.github/workflows/tf_dev_plan.yml
@@ -14,10 +14,6 @@ on:
 
 env:
   TF_WORKSPACE: development
-  # TF_VAR_oci_key_fingerprint: "${{ secrets.OCI_KEY_FINGERPRINT }}"
-  # TF_VAR_tenancy_ocid: "${{ secrets.TENANCY_OCID }}"
-  # TF_VAR_user_ocid: "${{ secrets.USER_OCID }}"
-  # TF_VAR_oci_key: "${{ secrets.OCI_KEY }}"
 
 permissions:
   contents: read
@@ -67,14 +63,7 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Compare changes with existing infrastructure.
       id: plan
-      run: |
-        terraform plan \
-          -input=false \
-          -var="oci_key_fingerprint=${{ secrets.OCI_KEY_FINGERPRINT }}" \
-          -var="tenancy_ocid=${{ secrets.TENANCY_OCID }}" \
-          -var="user_ocid=${{ secrets.USER_OCID }}" \
-          -var="oci_key=${{ secrets.OCI_KEY }}"
-
+      run: terraform plan -input=false
     #   # On push to "main", build or change infrastructure according to Terraform configuration files
     #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     # - name: Terraform Apply
