--- a/.github/workflows/tf_apply_prod.yml
+++ b/.github/workflows/tf_apply_prod.yml
@@ -8,12 +8,12 @@
 name: 'Terraform to OCI'
 
 on:
-  pull_request:
+  push:
     branches:
-      - develop
+      - main
 
 env:
-  TF_WORKSPACE: development
+  TF_WORKSPACE: production
 
 permissions:
   contents: read
@@ -51,17 +51,9 @@ jobs:
       id: val
       run: terraform validate
 
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Check formatting.
-      id: fmt
-      run: terraform fmt -check
-
-    # Generates an execution plan for Terraform
-    - name: Compare changes with existing infrastructure.
-      id: plan
-      run: terraform plan -input=false
-    #   # On push to "main", build or change infrastructure according to Terraform configuration files
-    #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    # - name: Terraform Apply
-    #   if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-    #   run: terraform apply -auto-approve -input=false
+      # On push to "main", build or change infrastructure according to Terraform configuration files
+      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+    - name: Apply changes to OCI.
+      id: apply
+      if: github.ref_name == 'main' && github.event_name == 'push'
+      run: terraform apply -auto-approve -input=false
