--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ env.sh
 
 # Secrets or variables which should be set in TF cloud or using other method. These are just for local testing.
 oci.auto.tfvars
+
+# Mac folders
+.DS_Store
