feat: renamed workflow names
Closes: #6

--- a/.github/workflows/tf_dev_plan.yml
+++ b/.github/workflows/tf_dev_plan.yml
@@ -5,7 +5,7 @@
 #
 # Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
 
-name: 'Terraform to OCI'
+name: 'TF to OCI - plan only'
 
 on:
   pull_request:
